--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+RELEASE_STORE_PASSWORD=asambacoin2025
+RELEASE_KEY_PASSWORD=asambacoin2025
+RELEASE_KEY_ALIAS=key0
+RELEASE_STORE_FILE=../key.jks
