--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,12 @@ dependencies:
   http: ^1.3.0
   intl: ^0.19.0
   liquid_pull_to_refresh: ^3.0.1
+  local_auth: ^2.3.0
   lottie: ^3.2.0
   mobile_scanner: ^6.0.7
+  month_picker_dialog: ^3.0.0
   pinput: ^5.0.1
+  qr_flutter: ^4.1.0
   shared_preferences: ^2.5.2
 
 dev_dependencies:
